[package]
name = "bitburner_vim"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.60"
serde = { version="1.0.142", features = ["derive"] }
serde_json = "1.0.83"
clap = { version="3.2.16", features=["derive"] }
base64 = "0.13.0"
